[package]
name = "tide-oauth2-client"
version = "0.1.0"
authors = ["Amit Bansal <amitbansal26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-session = "0.3.0"

oauth2 = "3.0.0-alpha.9"
base64 = "0.10"
rand = "0.7"
url = "2.1"
http = "0.1"

futures = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = {version = "0.1" , features = ["env_logger"]}
tracing-subscriber = "0.2"
config = "0.10"
eyre = "0.4"
color-eyre = "0.3"
dotenv = "0.15.0"
